syntax = 'proto3';

package enrollmentPackage;

service EnrollmentService {
    rpc getCurrentEnrollment (Enrollment) returns (Response);
}

message Enrollment {
    string infor = 1;
}

message Response {
    string response = 1;
}